java-microservice/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spring-boot-namespace
  labels:
    istio-injection: enabled
    istio-injection-istio.io/rev: "asm-managed-rapid"
