java-microservice/overlays/dev/patch-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-app
spec:
  template:
    spec:
      containers:
      - name: spring-boot-app
        image: tomcat:8.5.93-jdk8-corretto
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 500m
            memory: 640Mi
          requests:
            cpu: 50m
            memory: 64Mi
