java-microservice/overlays/dev/patch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-service
spec:
  ports:
  - port: 80
    $patch: delete
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
