java-microservice/overlays/dev/patch-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: spring-boot-gateway
spec:
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*" # wildcard host to match all inbound HTTP traffic
