java-microservice/overlays/dev/patch-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-boot-vs
spec:
  http:
    - route:
      - destination:
          host: spring-boot-service
          port:
            number: 80
